<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Actoma+</string>
    <string name="process_name">com.xdja.actoma</string>
    <string name="login">Login</string>
    <string name="load">Loading</string>
    <string name="being">is &#160;</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="verify">Verification</string>
    <string name="complete">Done</string>
    <string name="certain">OK</string>
    <string name="skip">Skip</string>
    <string name="handle">Handle</string>
    <string name="setHeaderAvater">Set Head Portrait</string>
    <string name="modify_password">Modify Password</string>
    <string name="avater">Head Portrait</string>
    <string name="nickName">Nickname</string>
    <string name="qr_card">My QR Code </string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="more"><u>More</u></string>
    <string name="forgetPassword">Forget Password</string>
    <string name="netNotWork">Network unavailable, please check your network settings</string>
    <string name="prompt">Tip</string>
    <string name="this_the">I\'ll take this one</string>
    <string name="safe_card_error">The security card or certificate is abnormal</string>
    <string name="gateway_error">Application internal error</string>
    <string name="server_error">Server internal error</string>
    <string name="device_not_activate">The device is not activated, please contact customer service activation (error code:%1$s, card number:%2$s)</string>
    <string name="no_detect_secure_chip_1">Device don\'t detect security chip or don\'t open the launcher of chip housekeeper</string>
    <string name="account_transfer_fail">Account not migration</string>
    <string name="safe_card_lock_prompt">The device security chip has been locked</string>
    <string name="safe_card_lock">Unlock it before using the Actoma+. Click below to unlock, go to the Chip Manager application to begin.</string>
    <string name="unlock">Activate Now</string>
    <string name="inner_authCode_invalid">Verification code is error</string>
    <string name="auth_code_error">Verification code error</string>
    <string name="login_pwd">The Login Password</string>
    <string name="old_account_fix_pwd_prompt">Actoma+ has been upgraded, in order to ensure the safety of security password, please set the password, after the success of the set, you can use this password to log in.</string>
    <string name="old_account_prompt">Actoma+ has been upgraded, please remember Actoma account.</string>
    <string name="device_removed">The device %1$s has been removed from the account of trusted device list, this account will logout.</string>
    <string name="account_will_quit">This account will log out</string>
    <string name="account_unbind">The account is unbundled on this device</string>
    <string name="forced_offline">Your account login in other mobile device, this device will be logged out. If not your operation, please enter the Settings->Account &amp; Security->Login Device Management process.</string>
    <string name="forced_offline_title">Your account has been logged on to other mobile devices.</string>
    <string name="is_delete_image">Confirm delete this picture?</string>
    <string name="open_encryption_channel">Open the third encryption channel</string>
    <string name="image_big">Please select below 30M images</string>
    <string name="scan_failed">Scan failed, please scan again</string>
    <string name="register_count">The number of registered accounts exceeds the maximum limit of the day:</string>
    <string name="register_count_month">The number of registered accounts exceeds the maximum limit of the month:</string>
    <string name="register_count_year">The number of registered accounts exceeds the maximum limit of the year:</string>
    <string name="count">times</string>
    <string name="return_map_not_empty">The returned Map can not be empty</string>
    <string name="return_parameter_error">Return parameter error</string>
    <string name="create">Generate</string>
    <string name="set_succeed">Set success</string>
    <string name="submit_failed">Failed to submit, please enter again</string>
    <string name="phone_or_pwd_error">Phone number or password is incorrect, please enter again</string>
    <string name="account_or_pwd_error">Actoma+ account or password is incorrect, please enter again</string>
    <string name="phone_or_verifycode_error">Phone number or verification code is incorrect, please enter again</string>
    <string name="unknow_reason_404">Unknown cause, operation failed (404)</string>
    <string name="unknow_reason_406">Unknown cause, operation failed (406)</string>
    <string name="login_count_limit_title">Login attempt has reached the maximum number of times</string>
    <string name="login_count_limit_content" tools:ignore="PluralsCandidate">The number of login attempts has reached the daily limit(%1$dtimes/day), please try again another day, if you forget the password, please reset it.</string>
    <string name="roger">Got it</string>
    <string name="account_already_bind_mobile">Account already bind mobile</string>
    <string name="remaining_selected_opportunities" tools:ignore="PluralsCandidate">There are %1$d opportunities to select</string>
    <string name="no_selected_opportunities">Ten selected opportunities have been used up, if you don\'t like this account, can be set for yourself.</string>
    <string name="get_account">Get the account</string>
    <string name="change_account">Change the account</string>
    <string name="verify_code_error">Verification code is incorrect, please enter again</string>
    <string name="force_bind">Force binding</string>
    <string name="bind">Binding</string>
    <string name="unbind">Unbundling</string>
    <string name="submit">Submit</string>
    <string name="account_error">Actoma+ account is made up of 6~20 begin with a letter of letters, Numbers, underline and minus sign.</string>
    <string name="upload">Upload</string>
    <string name="get_verify_code_prompt">Please get the verification code first</string>
    <string name="sure_you_want_to_logout">Are you sure you want to log out?</string>
    <string name="logout_content_prompt">Exit will not delete any historical data, the next login can still view.</string>
    <string name="pwd_error">The password is incorrect, please try again</string>
    <string name="pwd_error_retry_input">The password is incorrect, please enter again</string>
    <string name="timeout">Network request timeout</string>
    <string name="empower">Authorization</string>
    <string name="bind_phone_number_succeed">Bind phone number successfully</string>
    <string name="change_phone_number_succeed">Change phone number successfully</string>
    <string name="phone_number_bind_succeed">Bind phone number successfully</string>
    <string name="change">Change</string>
    <string name="local">Local</string>
    <string name="has_login">Has logged</string>
    <string name="load_device_list">Loading device list</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="set_account_succeed">Actoma+ account set up successfully</string>
    <string name="set_nickname_succeed">Nickname set Success</string>
    <string name="apostrophe">&#8230;</string>
    <string name="parameter_illegality">Illegal parameter</string>
    <string name="account_cannot_be_empty">Account cannot be empty</string>
    <string name="pwd_cannot_be_empty">Password can not be empty</string>
    <string name="request_params_error">Request parameter is empty</string>
    <string name="account_format_illegal">Account format for illegal</string>
    <string name="mobile_format_illegal">Phone number format is illegal</string>
    <string name="customize_account_format_illegal">Illegal custom account format</string>
    <string name="old_account_format_illegal">The old account format illegally</string>
    <string name="new_account_format_illegal">The new account format illegally</string>
    <string name="friends_mobile_number_illegal">Friends mobile number is illegal</string>
    <string name="friends_mobile_format_illegal">Illegal friends phone number format</string>
    <string name="friends_mobile_repeat">Friends phone number repeat</string>
    <string name="client_type_illegal">No longer within the scope of the client type</string>
    <string name="login_type_illegal">Is not within the scope of the login type</string>
    <string name="verify_login_top_text">You can verify the identity by following the login. However, due to the failure to withstand the letter of authorization, key data may not be able to restore the original device, and offline messages will not be able to decrypt.</string>
    <string name="verify_login_binded_phone">Account has been bound to the phone number</string>
    <string name="verify_login_no_bind_phone">Account is not bound phone number</string>
    <string name="verify_login_verify_code">Verify by phone verification code</string>
    <string name="verify_login_verify_friend_phone">Verify with your friend\'s phone number</string>
    <string name="verify_login_bottom_text">This function can only be done on a credit facility (logged on to this account).</string>
    <string name="reset_password_top_text">To reset the password need to verify identity, you can choose the following ways:</string>
    <string name="phone_number">Mobile</string>
    <string name="at_account">Account</string>
    <string name="login_device_manager">Login Device Management</string>
    <string name="auth_device_login_top_text">Authorize other devices to log on to the account (for the first time).</string>
    <string name="auth_device_login_way1">Mode 1: Enter the serial number generated when other devices log in for the first time</string>
    <string name="auth_device_login_way2">Mode 2: Scan the QR code generated by the first login of other devices</string>
    <string name="serial_number">Serial</string>
    <string name="serial_number_input_hint">Enter Serial Number</string>
    <string name="nodistrub_top_message">Do Not Disturb</string>
    <string name="action_search">Search</string>
    <string name="action_start_group_chat">Group Chat</string>
    <string name="action_add_friend">Add Friends</string>
    <string name="action_scan">Scan QR Code</string>
    <string name="action_setting">Settings</string>
    <string name="open_receiver_mode">Turn off Speaker</string>
    <string name="message_call_tip">Chat &amp; Call History</string>
    <string name="drop_all_message">Delete Chat History</string>
    <string name="drop_all_message_tip">The chat history for all contacts and groups will be deleted</string>
    <string name="clear_all_callLog">Delete Call History</string>
    <string name="clear_all_callLog_tip">The call history for all contacts and groups will be deleted</string>
    <string name="nodistrub_top_tip">If enabled,you won\'t be notified about  new messages during the hours set.</string>
    <string name="nodistrub_begin_time_message">Start </string>
    <string name="nodistrub_end_time_message">End </string>
    <string name="no_distrub_start_time">PM 11:00</string>
    <string name="no_distrub_end_time">AM 08:00</string>
    <string name="leave_phone">Phone is not around？</string>
    <string name="safe_please_input_gesture">Enter a gesture password</string>
    <string name="safe_pwd_error_retry">Password error, you can try again</string>
    <string name="safe_input_original_pwd">Enter the original password</string>
    <string name="safe_five_error_reinput">After the 5 failure,need to re login</string>
    <string name="safe_forget_pwd">Forget Password</string>
    <string name="safe_lock">Safe Lock</string>
    <string name="plus">+</string>
</resources>