<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin_16"
        android:paddingRight="@dimen/activity_horizontal_margin_16"
        android:paddingTop="@dimen/base_12">

        <TextView
            style="@style/normal_text"
            android:lineSpacingExtra="@dimen/base_6"
            android:text="@string/reset_password_top_text" />

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="38dp"
            android:text="@string/verify_login_binded_phone"
            android:textSize="@dimen/bigger_bigger_text_size_18" />

        <Button
            android:id="@+id/btn_reset_password_verify_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_40"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/base_20"
            android:background="@drawable/sel_bg_gold"
            android:text="@string/verify_login_verify_code" />

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="@dimen/base_20"
            android:text="@string/verify_login_no_bind_phone"
            android:textSize="@dimen/bigger_bigger_text_size_18" />

        <Button
            android:id="@+id/btn_reset_password_friend_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_40"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/base_20"
            android:background="@drawable/sel_bg_green"
            android:text="@string/verify_login_verify_friend_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/base_10"
            android:text="@string/verify_login_bottom_text"
            android:textColor="@color/blade_black_65"
            android:textSize="@dimen/smaller_text_size_12" />

    </LinearLayout>

</LinearLayout>
