<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gesturepwd_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.xdja.comm.circleimageview.CircleImageView
        android:id="@+id/iv_login_face"
        android:layout_width="@dimen/biggest_img_96"
        android:layout_height="@dimen/biggest_img_96"
        android:src="@mipmap/circle_head_deafult_56"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/base_40"/>


    <TextView
        android:id="@+id/input_gesturepwd_unlock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_20"
        android:gravity="center_horizontal"
        android:text="@string/safe_please_input_gesture"
        android:textColor="@color/base_black_65"
        android:textSize="@dimen/head_16"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/error_gesturepwd_unlock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_20"
        android:gravity="center_horizontal"
        android:text="@string/safe_pwd_error_retry"
        android:textColor="@color/base_red"
        android:textSize="@dimen/hint_16"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/original_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_20"
        android:gravity="center_horizontal"
        android:text="@string/safe_input_original_pwd"
        android:textSize="@dimen/hint_16"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_14"
        android:gravity="center_horizontal"
        android:text="@string/safe_five_error_reinput"
        android:textColor="@color/base_black_65"
        android:textSize="@dimen/body2_12"
        android:visibility="invisible"
        />

    <com.xdja.presenter_mainframe.widget.LockPatternView
        android:id="@+id/gesturepwd_unlock_lockview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/base_44"
        android:layout_marginLeft="@dimen/base_44"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/base_24" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_40"
        android:gravity="center_horizontal"
        android:text="@string/safe_forget_pwd"
        android:textColor="@color/base_black_65"
        android:textSize="@dimen/head_16"
        />

</LinearLayout>
